--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,13 @@
+pytz==2019.3
 Flask==1.1.1
-google-api-python-client==1.7.11
-google-auth==1.10.0
+httplib2==0.15.0
+google_api_python_client==1.7.11
+protobuf==3.11.2
+requests
 google-cloud-pubsub==1.0.0
-# oauth2client
 google-cloud-bigquery==1.23.1
 
-cachetools==4.0.0
-certifi==2019.11.28
-chardet==3.0.4
-google-api-core==1.15.0
-google-cloud-core==1.1.0
-google-resumable-media==0.5.0
-googleapis-common-protos==1.6.0
-idna==2.8
-protobuf==3.11.1
-pyasn1==0.4.8
-pyasn1-modules==0.2.7
-pytz==2019.3
-requests==2.22.0
-rsa==4.0
-six==1.13.0
-urllib3==1.25.7
-# for sheets integration
-apiclient==1.0.4
-google-auth-httplib2==0.0.3
-httplib2==0.15.0
-oauth2==1.9.0.post1
+
+
+
+
